--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,8 @@
 version: '3'
-services: 
-  webapp: 
+services:
+  web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    ports: 
-      - "3000:3000"
-    volumes: 
-      - /app/node_modules
-      - .:/app
-    environment:
-      - WATCHPACK_POLLING=true
-  tests: 
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes: 
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
-    environment:
-      - WATCHPACK_POLLING=true
+      dockerfile: Dockerfile
+    ports:
+      - '80:80'
